css/style.css
html {
	font-size: 20px;
	background-color: #000000;
}
body {
	text-align: center;
	background-color: #000000;
	color: #f5f5f5;
	cursor: crosshair;
}
a {
	color: #6fb3f2;
}
a:hover,
a:focus {
	color: #9ecbf5;
}

#knoxdevs-tagline { 
	font-size: 50px;
}

@media(max-width:60em){ #knoxdevs-tagline{ font-size: 30px;}}

#github-call-to-action {
	padding-top: 30px;
}

/* Wrapper */
.icon-button {
	background-color: #ccc;
	border-radius: 1.8rem;
	cursor: pointer;
	display: inline-block;
	font-size: 1.0rem;
	line-height: 1.8rem;
	margin: 0 0px;
	position: relative;
	text-align: center;
	-webkit-user-select: none;
	   -moz-user-select: none;
	    -ms-user-select: none;
	        user-select: none;
	height: 1.8rem;
	width: 1.8rem;
}

/* Circle */
.icon-button span {
	border-radius: 0;
	display: block;
	height: 0;
	left: 50%;
	margin: 0;
	position: absolute;
	top: 50%;
	-webkit-transition: all 0.3s;
	   -moz-transition: all 0.3s;
	     -o-transition: all 0.3s;
	        transition: all 0.3s;
	width: 0;
}
.icon-button:hover span {
	width: 1.8rem;
	height: 1.8rem;
	border-radius: 3.6rem;
	margin: -.9rem;
}
.twitter span {
	background-color: #4099ff;
}
.facebook span {
	background-color: #3B5998;
}
.google-plus span {
	background-color: #db5a3c;
}
.github span {
	background-color: #333333;
}
.linkedin span {
	background-color: #007bb6;
}
.profile-image {
	border: 1px solid #f5f5f5;
}
.floating-head {
	position: fixed;
	top: 0;
	left: 0;
	pointer-events: auto;
	cursor: crosshair;
	z-index: -1;
	will-change: transform;
}
.my-name {
}
.my-title {
}



/* Icons */
.icon-button i {
	background: none;
	color: white;
	height: 1.8rem;
	left: 0;
	line-height: 1.8rem;
	position: absolute;
	top: 0;
	-webkit-transition: all 0.3s;
	   -moz-transition: all 0.3s;
	     -o-transition: all 0.3s;
	        transition: all 0.3s;
	width: 1.8rem;
	z-index: 10;
}
.icon-button .fa-twitter {
	color: #4099ff;
}
.icon-button .fa-facebook {
	color: #3B5998;
}
.icon-button .fa-google-plus {
	color: #db5a3c;
}
.icon-button .fa-linkedin {
	color: #007bb6;
}
.icon-button .fa-github {
	color: #333333;
}
.icon-button:hover .fa-twitter,
.icon-button:hover .fa-facebook,
.icon-button:hover .fa-linkedin,
.icon-button:hover .fa-github,
.icon-button:hover .fa-google-plus {
	color: white;
}

